// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TabMyDelegations view should show a message if not staked yet to any validator 1`] = `
<div>
  <tm-data-msg-stub
    icon="info_outline"
  >
    <div>
      
      No Active Delegations
    
    </div>
     
    <div>
      
      Looks like you haven't delegated any stakes yet. Head over to
      the
      
      <router-link-stub
        to="[object Object]"
      >
        
        validator list
      
      </router-link-stub>
      
      to make your first delegation!
    
    </div>
  </tm-data-msg-stub>
   
  <!---->
</div>
`;

exports[`Component: TabMyDelegations view should show committed validators 1`] = `
<div>
  <div>
    <table-validators-stub
      validators="[object Object]"
    />
  </div>
   
  <!---->
</div>
`;

exports[`Component: TabMyDelegations view should show unbonding validators and the current committed validator 1`] = `
<div>
  <tm-data-msg-stub
    icon="info_outline"
  >
    <div>
      
      No Active Delegations
    
    </div>
     
    <div>
      
      Looks like you haven't delegated any stakes yet. Head over to
      the
      
      <router-link-stub
        to="[object Object]"
      >
        
        validator list
      
      </router-link-stub>
      
      to make your first delegation!
    
    </div>
  </tm-data-msg-stub>
   
  <div>
    <h3
      class="tab-header transactions"
    >
      
      Pending Undelegations
    
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <li-stake-transaction-stub
        bonding-denom="stake"
        transaction="[object Object]"
        tx-type="cosmos-sdk/Undelegate"
        unbonding-time="52000"
        url="/staking/validators"
        validators=""
      />
    </div>
  </div>
</div>
`;
